--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Bellefair&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Bellefair&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap');
 
 :root {
   /* Colors */
@@ -7,20 +7,25 @@
   --text-color: #ffffff;
   --color-2: #d0d6f9;
   /* Typography */
-  --font-family-1: "Bellefair", serif;
-  --font-family-2: "Barlow Condensed", sans-serif;
+  --font-family-1: 'Bellefair', serif;
+  --font-family-2: 'Barlow Condensed', sans-serif;
 }
 
 body {
+  background-color: black;
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
   min-height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
+}
+.homepage {
+  /* display: none; */
 }
 .home-img img {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 62rem;
+  /* display: none; */
 }
 .container {
   position: absolute;
@@ -33,15 +38,18 @@ body {
   text-align: center;
   font-family: var(--font-family-2);
   right: 7rem;
+  z-index: 1;
 }
 .line {
   width: 40rem;
   opacity: 50%;
+  z-index: 1;
 }
 #logo {
   position: relative;
   left: 55px;
   transition: transform 1s ease-in-out;
+  z-index: 1;
 }
 #logo:hover {
   transform: rotate(360deg);
@@ -54,6 +62,7 @@ body {
   top: 40px;
   background: rgba(255, 255, 255, 0.04);
   backdrop-filter: blur(40.7742px);
+  z-index: 1;
 }
 .navLinks {
   text-decoration: none;
@@ -77,7 +86,7 @@ body {
   top: 387px;
   margin-left: 10rem;
   color: var(--text-color);
-  left: 165px;
+  left: 10%;
   cursor: context-menu;
 }
 .hero-text h1 {
@@ -103,7 +112,7 @@ body {
   margin-top: 8rem;
   transition: box-shadow 0.3s ease;
 }
-.exploreBtn:hover{
+.exploreBtn:hover {
   box-shadow: #d0d6f957 0 0 0px 5em;
 }
 .exploreBtn h1 {
@@ -119,4 +128,136 @@ body {
   font-family: var(--font-family-2);
   line-height: 32px;
   font-size: 1.35rem;
+}
+.tab-num {
+  opacity: 0.5;
+}
+.planet-bg {
+  width: 100%;
+  height: 62rem;
+  display: none;
+  position: relative;
+  animation: slideIn 0.3s ease;
+}
+@keyframes slideIn {
+  0% {
+    left: 100%;
+  }
+  100% {
+    left: 0%;
+  }
+}
+.container-destination {
+  display: none;
+  grid-template-columns: repeat(2, 1fr);
+  margin-left: 20%;
+  position: relative;
+  bottom: 48rem;
+  color: var(--text-color);
+}
+.planets {
+  display: flex;
+  gap: 2em;
+}
+.planets a {
+  font-size: 1.3rem;
+  opacity: 0.9;
+}
+.headline,
+.container-destination h1,
+h2,
+h3,
+a {
+  text-transform: uppercase;
+}
+.container-destination h1,
+h2 {
+  font-family: var(--font-family-1);
+  font-weight: 400;
+}
+.planet-description {
+  word-wrap: break-word;
+  width: 25rem;
+  font-size: 1.2rem;
+  opacity: 0.8;
+}
+.planet-name {
+  font-size: 1rem;
+  text-decoration: none;
+  color: var(--text-color);
+  font-size: 22px;
+  text-transform: uppercase;
+  padding-bottom: 1rem;
+  border-bottom: 2px solid transparent;
+  transition: border-bottom 0.5s ease-in-out;
+}
+.planet-name:hover {
+  border-bottom: 2px solid var(--text-color);
+}
+.container-destination p {
+  margin-top: -3rem;
+}
+.container-destination a,
+h3,
+p,
+.headline {
+  font-weight: 400;
+  font-family: var(--font-family-2);
+  text-decoration: none;
+  color: var(--text-color);
+  line-height: 2rem;
+}
+.distance-time {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 20rem;
+}
+.planet-title {
+  font-size: 6em;
+  margin-top: 10px;
+}
+.planet-img {
+  margin-top: 50px;
+}
+.planet-line {
+  width: 60%;
+  margin-right: 20rem;
+  opacity: 0.3;
+}
+.distance-time h2 {
+  font-size: 1.7rem;
+}
+.planet-img {
+  border-radius: 50%;
+  transition: transform 0.5s ease;
+}
+.planet-img:hover {
+  transform: scale(1.3);
+}
+.headline {
+  position: relative;
+  bottom: 50rem;
+  left: 12%;
+  color: var(--text-color);
+}
+.headline {
+  display: none;
+}
+.planet-section,
+.planet-img {
+  animation: slideOut 0.3s ease;
+  position: relative;
+}
+@keyframes slideOut {
+  0% {
+    left: 100%;
+  }
+  100% {
+    left: 0%;
+  }
+}
+@media screen and (max-width: 119rem) {
+  body {
+    overflow: scroll;
+  }
 }
