--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   margin: 0px;
   padding: 0px;
   min-height: 100vh;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 .homepage {
   /* display: none; */
@@ -54,6 +54,7 @@ body {
 #logo:hover {
   transform: rotate(360deg);
 }
+
 .blurbox {
   position: absolute;
   width: 60%;
@@ -132,6 +133,20 @@ body {
 .tab-num {
   opacity: 0.5;
 }
+
+.container-2 {
+  position: absolute;
+  animation: slideIn2 0.3s ease;
+}
+@keyframes slideIn2 {
+  0% {
+    left: 0%;
+  }
+  100% {
+    left: 10%;
+  }
+}
+
 .planet-bg {
   width: 100%;
   height: 62rem;
@@ -194,6 +209,14 @@ h2 {
 .planet-name:hover {
   border-bottom: 2px solid var(--text-color);
 }
+.tab-border {
+  padding-bottom: 2.3rem;
+  border-bottom: 2px solid var(--text-color);
+}
+.mini-tab-border {
+  padding-bottom: 1rem;
+  border-bottom: 2px solid var(--text-color);
+}
 .container-destination p {
   margin-top: -3rem;
 }
@@ -245,17 +268,10 @@ p,
 }
 .planet-section,
 .planet-img {
-  animation: slideOut 0.3s ease;
+  animation: slideIn 0.3s ease;
   position: relative;
 }
-@keyframes slideOut {
-  0% {
-    left: 100%;
-  }
-  100% {
-    left: 0%;
-  }
-}
+
 @media screen and (max-width: 119rem) {
   body {
     overflow: scroll;
