--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   margin: 0px;
   padding: 0px;
   min-height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; CHANGE*/
 }
 .homepage {
   /* display: none; */
@@ -228,7 +228,8 @@ h2 {
 .container-destination a,
 h3,
 p,
-.headline {
+.headline,
+.headline h1 {
   font-weight: 400;
   font-family: var(--font-family-2);
   text-decoration: none;
@@ -262,6 +263,11 @@ p,
 .planet-img:hover {
   transform: scale(1.3);
 }
+.head-crew {
+  font-family: var(--font-family-2);
+  text-transform: uppercase;
+  display: none;
+}
 .headline {
   position: relative;
   bottom: 50rem;
@@ -269,7 +275,8 @@ p,
   color: var(--text-color);
 }
 .headline {
-  display: none;
+  display: block;
+  z-index: 2;
 }
 .planet-section,
 .planet-img {
@@ -277,6 +284,99 @@ p,
   position: relative;
 }
 
+.crew-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  position: relative;
+  top: 8rem;
+  color: var(--text-color);
+  gap: 1rem;
+  margin-left: 25rem;
+  animation: slide 0.3s linear;
+}
+@keyframes slide {
+  0% {
+    left: 100%;
+  }
+  100% {
+    left: 0%;
+  }
+}
+.crew-img img {
+  position: relative;
+  height: 45rem;
+  animation: slideIn 0.3s linear;
+}
+.crew-content p {
+  word-wrap: break-word;
+  width: 444px;
+  color: var(--color-2);
+  font-size: 25px;
+}
+.crewBg {
+  width: 100%;
+  height: 62rem;
+  display: block;
+  position: relative;
+  animation: slideIn 0.3s linear;
+}
+.crew-content h2 {
+  opacity: 0.7;
+  font-size: 30px;
+}
+.crew-content h1 {
+  font-weight: 400;
+  text-transform: uppercase;
+  font-family: var(--font-family-1);
+  font-size: 56px;
+}
+.crew-content {
+  position: absolute;
+  top: 10rem;
+}
+.btns {
+  display: flex;
+  gap: 1rem;
+  position: absolute;
+  top: 39rem;
+}
+
+.crew-btn:hover {
+  background-color: var(--text-color);
+}
+.crewBtn-effect {
+  background-color: var(--text-color);
+}
+.crew-btn {
+  width: 0.82rem;
+  height: 0.8rem;
+  border-radius: 50%;
+  border: none;
+  background-color: #979797;
+  cursor: pointer;
+  transition: background-color 0.3s linear;
+}
+
+.crewBg {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+}
+.show-crew {
+  display: none;
+}
+.headline-crew {
+  text-transform: uppercase;
+  font-family: var(--font-family-2);
+  position: relative;
+  right: 12rem;
+  font-weight: 400;
+  /* display: none; */
+}
+.btn-1 {
+  background-color: var(--text-color);
+}
 @media screen and (max-width: 119rem) {
   body {
     overflow: scroll;
